# nazgul

./: .env.yaml  .gcloudignore  .gitignore  MANIFEST.in  README.md  index.yaml  main.py  pyproject.toml  requirements.txt  requirements_local.txt  requirements_tests.txt  setup.cfg  setup.py
nazgul/: _task.pxd  action.py  app.py  cli.py  constants.py  core.pyx  driver.py  manager.py  message.py  nazgul.pyx  response.py  service.py
nazgul/actions/a0000_welcome/: a0000_welcome.py
nazgul/actions/a0010_record_time/: a0010_record_time.py
nazgul/actions/a0020_get_time_per_day/: a0020_get_time_per_day.py
nazgul/actions/a0025_test/: a0025_test.py
nazgul/actions/a9999_repeat/: a9999_repeat.py
nazgul/db/: example.db  nazgul.db
nazgul/messages/: google_action.py  google_chat.py
nazgul/models/: datastore.py  records.py
nazgul/src/: CMakeLists.txt  Task.cpp  Task.hpp
postman/: Nazgul_local.postman_environment.json  postman_collection.json
tests/: tests_main.py
