[bdist_wheel]
universal=1

[metadata]
name = py-nazgul
version = 0.1.0
python_requires = >=3.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Click==8.1.3
    rich==12.5.1

[options.entry_points]
console_scripts =
    nazgul = nazgul.cli:cli